<resources>
    <string name="app_name">Lost and Found</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="lost_found_logo"><![CDATA[Lost & Found Logo]]></string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="home_address">Home Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="where_did_you_lose_it">Where did you lose it?</string>
    <string name="next">Next</string>
    <string name="enter_coordinates">Enter Coordinates</string>
    <string name="what_did_you_lose">What did you lose?</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="find_my_item">Find My Item!</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_item">Add Item</string>
    <string name="how_would_you_describe_it">How would you describe it?</string>
    <string name="find_the_owner">Find the owner!</string>
    <string name="color">Color:</string>
    <string name="color_spinner">Color Spinner</string>
    <string name="category">Category:</string>
    <string name="category_spinner">Category Spinner</string>
    <string name="size">Size:</string>
    <string name="pattern">Pattern:</string>
    <string name="matched">Matched</string>
    <string name="todo">TODO</string>
    <string name="matches_for">Matches For:</string>
    <string name="edit_details">Edit Details</string>
    <string name="found_within">Found within</string>
    <string name="describe_your_item">Describe Your Item.</string>
    <string name="submit_verification">Submit Verification</string>
    <string name="pattern_spinner">Pattern Spinner</string>
    <string name="size_spinner">Size Spinner</string>
    <string name="verify">Verify</string>
    <string name="username_label">Username:</string>
    <string name="send_email">Send Email</string>
    <string name="waiting_for_verification">Waiting for verification.</string>
    <string name="email_address">Email Address</string>
    <string name="finding_your_item">Finding your item.</string>
    <string name="map">Map</string>
    <string name="set_meeting">Set Meeting</string>
    <string name="email_address_label">Email Address:</string>
    <string name="edit">Edit</string>
    <string name="home_address_label">Home Address:</string>
    <string name="update_profile">Update Profile</string>
    <string name="press_the_quot_quot_button_to_add_lost_items">Press the \"+\" button to add lost items.</string>
    <string name="press_the_quot_quot_button_to_add_found_items">Press the \"+\" button to add found items.</string>
    <string name="matches_will_appear_here">Matches will appear here.</string>
    <string name="tap_the_quot_quot_button_to_add_items">Tap the \"+\" button to add items.</string>
    <string name="found_items_empty">Tap the \"+\" button to add found items.</string>
    <string name="lost_items_empty">Tap the \"+\" button to add lost items.</string>
</resources>